@@ -1,5 +1,5 @@
 DIST gnome-scan-0.6.1.tar.bz2 498454 RMD160 a72115db4e850ae32b3c79294fa7eb77202ce6b4 SHA1 432e4f6370e0f9de5a9453a34871ea12aae9e025 SHA256 28848e410d0e95e3e9e873befbbb1903c2258137bbf1b8a40f38cebfb20a5b41
 DIST gnome-scan-0.6.tar.bz2 492459 RMD160 bfa5ef0f5abc7e8f25befcf7dbba822698446aa0 SHA1 9d29c07429a175e5314405a2832c31c6c5f2099b SHA256 25065805310e40741f8855180e99a57f79b68499b8aa56df66a15438c2268107
-EBUILD gnome-scan-0.6.1.ebuild 684 RMD160 f97e0749e5dfb7d4672d250e7f5e3d27ba1173f7 SHA1 8857fc9b8a0690ca395b54d4b9af122c8e476aa4 SHA256 98db72de2d6b5bad52f6c8dd5b98a34c8235eb30fdd6ae4f492046d71da77c05
+EBUILD gnome-scan-0.6.1.ebuild 684 RMD160 a5de632cb1726a16c14f14fa260207bb5fa3a579 SHA1 758b309de7635bccdc6aecb337f1888854427d90 SHA256 6d254e296bbeb7a538a73f126f7747c933ba2b2221cb1021d06d82c8807ff9fd
 EBUILD gnome-scan-0.6.ebuild 684 RMD160 57f3fb7249dfc3d7c4459604fc18a3d495bbd764 SHA1 b0b8488bba806801e93ee9d6bc327577d4fa4e23 SHA256 e6fd4c12c970e4b8777947a74aa7e58d00994ab1bc280748dce83912d42a647d
-MISC ChangeLog 688 RMD160 6b7ff78a32fbdec7a4537a0640ce280c81b64494 SHA1 2fffdbdb978dd6bd405e4f442977b3d0bf1c67e9 SHA256 9bdea710fe5b24a213744b20b0ed4e714d552edce0ff2c290a3bc0972ef730af
+MISC ChangeLog 774 RMD160 c5277b25ea1cecd769620aa56480ad5017c0f64b SHA1 bd48d73041437f282bdfaef74341c310bd022896 SHA256 2faf1654b200dad27867bd893fa947023a9e8beb79b7d4c230193d7ce7ed392f
